# RustDropper

./: Cargo.toml  LICENSE  README.md  build.rs
manifest/: manifest.rc
manifest_change/: change.txt  temp.manifest
src/: main.rs  test(bad).rs
