[package]
name = "rustdropper"
version = "0.1.0"
authors = ["svg", "purpl3r0se"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/maifest.html

[build-dependencies]
embed-resource = "1.7"

[dependencies]
colored = "2.0.0"
downloader = "0.2.6"
serenity = "0.11.5"
whoami = "1.2.3"
goldberg = "0.1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
